--- a/app/globals.css
+++ b/app/globals.css
@@ -32,7 +32,7 @@ body {
   }
 
   .no-scrollbar {
-    overflow: auto; /* Allow scrolling */
+    overflow-y: auto; /* Allow scrolling */
   }
 
   .no-scrollbar::-webkit-scrollbar {
@@ -49,7 +49,6 @@ body {
     background-color: #f5f5f5;
     padding: 1em;
     border-radius: 5px;
-    overflow-x: auto;
     /* Ensures proper indentation */
   }
 
